osticket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apache
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: apache
    spec:
      hostname: osticket-apache
      terminationGracePeriodSeconds: 60
      containers:
        - name: apache
          image: ghcr.io/rinkp/osticket-dockerized:1.18.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - curl --fail http://localhost || exit 1
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /var/www/attachments
              name: attachments
      dnsConfig:
        options:
          - name: ndots
            value: '1'
      volumes:
        - name: attachments
          persistentVolumeClaim:
            claimName: attachments
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postfix
  template:
    metadata:
      labels:
        io.kompose.service: postfix
    spec:
      hostname: osticket-postfix
      terminationGracePeriodSeconds: 90
      containers:
        - name: postfix
          image: juanluisbaptiste/postfix
          imagePullPolicy: Always
          ports:
            - containerPort: 25
              name: 25tcp
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/bash -c "if [ $(mailq | wc -l) -ne 1 ]; then false; fi"
            failureThreshold: 3
            periodSeconds: 60
            timeoutSeconds: 1
