osticket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  selector:
    io.kompose.service: apache
  ports:
    - name: '9400'
      port: 9400
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postfix
spec:
  selector:
    io.kompose.service: postfix
  ports:
    - name: '25'
      port: 25
      targetPort: 25
